[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_suite"
version = "0.2.2"
authors = [
  { name="Chengfei Wu", email="wucf@projp.org" },
]
license = { text="MIT" }
description = "A Suite for Querying ChatGPT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai >= 1.3.4, < 2",
    "tqdm >= 4.66.1"
]
