[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning>=2.0,<3",]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_suite"
dynamic = ["version"]
authors = [
  { name="Chengfei Wu", email="wucf@projp.org" },
]
license = { text="MIT" }
description = "A Suite for Querying ChatGPT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai >= 1.34.0, < 2",
    "tqdm >= 4.66.1"
]

[tool.setuptools-git-versioning]
enabled = true
version_callback = "src.gpt_suite:__version__"

[project.urls]
homepage = "https://github.com/dreamilization/gpt-suite"